--- a/webapp/html/aboutMe.html
+++ b/webapp/html/aboutMe.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="icon" href="../views/plant-favicon.png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Swanky+and+Moo+Moo&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <a href="index.html"> Home </a> <a href="aboutMe.html"> About Me  </a>
+    </nav>
+    <img src="../views/vine2.png" alt="vines">
 </body>
 </html>
