--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="decription" content="A simple website made to track my plants">
     <title>Peter's Plant Processor</title>
+    <link rel="icon" href="../views/plant-favicon.png">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Swanky+and+Moo+Moo&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <a href="index.html"> Home </a> <a href="aboutMe.html"> About Me  </a>
+    </nav>
+    <div id="main-index-div">
+        <img src="../views/vine2.png" alt="vines">
+        <div id="index-background"></div>         
+        <div id="index-title"><h1>Welcome To My Plant Processor!</h1></div>
+    </div>
 </body>
 </html>
