Adding new page and updates to aboutMe

--- a/webapp/html/aboutMe.html
+++ b/webapp/html/aboutMe.html
@@ -12,8 +12,14 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"> Home </a> <a href="aboutMe.html"> About Me  </a>
+        <a href="index.html">Home</a> <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
     </nav>
-    <img src="../views/vine2.png" alt="vines">
+    <div id="about-me-body">
+        <div id="about-me-image-title">
+            <img src="../views/pictureOfMe.jpg" width="400" height="525">
+            <h1>Hey! <br>My Name Is Peter</h1>
+        </div>
+        <div class="dividing-line"></div>
+    </div>
 </body>
 </html>
