--- a/webapp/html/myPlants.html
+++ b/webapp/html/myPlants.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="decription" content="A simple website made to track my plants">
-    <title>Peter's Plant Processor</title>
+    <title>My Plants</title>
     <link rel="icon" href="../views/plant-favicon.png">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,9 +14,5 @@
     <nav>
         <a href="index.html">Home</a> <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
     </nav>
-    <div id="main-index-div">
-        <div id="index-background"></div>         
-        <div id="index-title"><h1>Welcome To My Plant Processor!</h1></div>
-    </div>
 </body>
 </html>
