Addition of MyPlants and some updates to styling

--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -6,18 +6,43 @@
     <meta name="decription" content="A simple website made to track my plants">
     <title>Peter's Plant Processor</title>
     <link rel="icon" href="../views/plant-favicon.png">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Swanky+and+Moo+Moo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Junge&family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
+        <div id="navigation-image">
+            <a href="index.html"><img src="../views/plant-favicon.png" width="40" height="40" title="Home"></a>
+        </div>
+        <div id="navigation-links">
+            <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
+        </div>
     </nav>
     <div id="main-index-div">
         <div id="index-background"></div>         
         <div id="index-title"><h1>Welcome To My Plant Processor!</h1></div>
+    </div>
+    <div class="dividing-line"></div>
+    <div class="centered">
+        <h1>What is it?</h1>
+        <p>
+            After picking up my first plant right before moving into my college apartment, I was wondering if I would have a way to be able to remember when it needed to be watered.
+            However, it really wasn't an issue for just ONE plant. <br><br> But now, my veritable army of four seems like it requires a lot more attention and bookkeeping when it comes to watering.
+            Therefore, I decided to take it upon myself to make some sort of application to keep track of said waterings. <br><br>
+            It just so happens that I'm currently enrolled in an internet programming course, and what better way to keep track of plants than with a fullstack web application? (That's what I tell myself at least)
+            Thus, Peter's Plant Processor was born.
+        </p>
+    </div>
+    <div class="dividing-line"></div>
+    <div class="centered">
+        <h1>Functionality</h1>
+        <p>
+            Once this is actually finished, it will be a way for me to log in from anywhere and update information about my plants.<br><br>
+            Not only to update information, but also see about when certain plants need to be watered and what kinds of conditions they should live in.
+        </p>
     </div>
 </body>
 </html>
