--- a/webapp/html/addPlant.html
+++ b/webapp/html/addPlant.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Plants</title>
-    <!-- Favicon -->
+    <meta name="decription" content="A simple website made to track my plants">
+    <title>Peter's Plant Processor</title>
     <link rel="icon" href="../views/plant-favicon.png">
-    <!-- Stylesheets -->
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/myPlants.css">
-    <!-- Scripts -->
-    <script src="../js/card-script.js"></script>
-    <!-- Font -->
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Junge&family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
@@ -25,12 +21,6 @@
             <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
         </div>
     </nav>
-    <div id="my-plants-body">
-        <h1>Welcome to My Plants!</h1>
-        <p>The hub for all things plant.</p><br><br>
-        <div id="plant-cards">
-            <!-- Plants are added here dynamically with card-script.js -->
-        </div>
-    </div>
+    
 </body>
 </html>
