--- a/webapp/html/plantPage.html
+++ b/webapp/html/plantPage.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Plants</title>
+    <title id="p-title"></title>
     <!-- Favicon -->
     <link rel="icon" href="../views/plant-favicon.png">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/myPlants.css">
+    <link rel="stylesheet" href="../css/plantPage.css">
     <!-- Scripts -->
-    <script src="../js/card-script.js"></script>
+    <script src="../js/individual-plant.js"></script>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,11 +25,17 @@
             <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
         </div>
     </nav>
-    <div id="my-plants-body">
-        <h1>Welcome to My Plants!</h1>
-        <p>The hub for all things plant.</p><br><br>
-        <div id="plant-cards">
-            <!-- Plants are added here dynamically with card-script.js -->
+    <div id="plant-body">
+        <h1 id="p-header"></h1>
+        <div class="dividing-line"></div>
+        <div id="picture-and-caption">
+            <img id="plant-picture"></img>
+            <p id="caption"></p>
+        </div>
+        <div class="dividing-line"></div>
+        <!-- Watering section -->
+        <div class="centered">
+            <h1>Watering information:</h1>
         </div>
     </div>
 </body>
