Updated nav element

--- a/webapp/html/addPlant.html
+++ b/webapp/html/addPlant.html
@@ -5,22 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="decription" content="A simple website made to track my plants">
     <title>Peter's Plant Processor</title>
+    <!-- FAVICON -->
     <link rel="icon" href="../views/plant-favicon.png">
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <!-- JS -->
+    <script defer src="../js/populate-nav.js"></script>
+    <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Junge&family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <div id="navigation-image">
-            <a href="index.html"><img src="../views/plant-favicon.png" width="40" height="40" title="Home"></a>
-        </div>
-        <div id="navigation-links">
-            <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
-        </div>
     </nav>
-    
+    <div class="centered">
+        <form action="">
+            
+        </form>
+    </div>
 </body>
 </html>
