Updated nav element

--- a/webapp/html/myPlants.html
+++ b/webapp/html/myPlants.html
@@ -4,26 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Plants</title>
-    <!-- Favicon -->
+    <!-- FAVICON -->
     <link rel="icon" href="../views/plant-favicon.png">
-    <!-- Stylesheets -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/myPlants.css">
-    <!-- Scripts -->
-    <script src="../js/card-script.js"></script>
-    <!-- Font -->
+    <!-- JS -->
+    <script defer src="../js/card-script.js"></script>
+    <script defer src="../js/populate-nav.js"></script>
+    <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Junge&family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <div id="navigation-image">
-            <a href="index.html"><img src="../views/plant-favicon.png" width="40" height="40" title="Home"></a>
-        </div>
-        <div id="navigation-links">
-            <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
-        </div>
     </nav>
     <div id="my-plants-body">
         <h1>Welcome to My Plants!</h1>
