Updated nav element

--- a/webapp/html/plantPage.html
+++ b/webapp/html/plantPage.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/plantPage.css">
     <!-- Scripts -->
     <script src="../js/individual-plant.js"></script>
+    <script defer src="../js/populate-nav.js"></script>
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,12 +19,12 @@
 </head>
 <body>
     <nav>
-        <div id="navigation-image">
+        <!-- <div id="navigation-image">
             <a href="index.html"><img src="../views/plant-favicon.png" width="40" height="40" title="Home"></a>
         </div>
         <div id="navigation-links">
             <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
-        </div>
+        </div> -->
     </nav>
     <div id="plant-body">
         <h1 id="p-header"></h1>
