updates to body

--- a/webapp/html/myPlants.html
+++ b/webapp/html/myPlants.html
@@ -26,6 +26,12 @@
         <div id="plant-cards">
             <!-- Plants are added here dynamically with card-script.js -->
         </div>
+        <div class="dividing-line"></div>
+        <h1>What do the colors mean?</h1>
+        <p>No color change means that this plant has been watered within the last week.
+        <br><span style="color:yellow">Yellow</span> means that this plant was last watered between 1-2 weeks ago
+        <br><span style="color:red">Red</span> means that this plant has not been watered in more than 2 weeks. It probably needs it.
+        </p>
     </div>
 </body>
 </html>
