--- a/webapp/html/plantPage.html
+++ b/webapp/html/plantPage.html
@@ -4,27 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="p-title"></title>
-    <!-- Favicon -->
+    <!-- FAVICON -->
     <link rel="icon" href="../views/plant-favicon.png">
-    <!-- Stylesheets -->
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/plantPage.css">
-    <!-- Scripts -->
+    <!-- JS -->
     <script src="../js/individual-plant.js"></script>
     <script defer src="../js/populate-nav.js"></script>
-    <!-- Font -->
+    <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Junge&family=Rosarivo:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
-        <!-- <div id="navigation-image">
-            <a href="index.html"><img src="../views/plant-favicon.png" width="40" height="40" title="Home"></a>
-        </div>
-        <div id="navigation-links">
-            <a href="aboutMe.html">About Me</a> <a href="myPlants.html">My Plants</a>
-        </div> -->
     </nav>
     <div id="plant-body">
         <h1 id="p-header"></h1>
@@ -37,6 +31,8 @@
         <!-- Watering section -->
         <div class="centered">
             <h1>Watering information:</h1>
+            <p id="watering"></p> <br><br>
+            <p><span id="insert-plant-species"></span> watering information</p>
         </div>
     </div>
 </body>
