--- a/webapp/static/html/index.html
+++ b/webapp/static/html/index.html
@@ -6,12 +6,12 @@
     <meta name="decription" content="A simple website made to track my plants">
     <title>Peter's Plant Processor</title>
     <!-- FAVICON -->
-    <link rel="icon" href="../views/plant-favicon.png">
+    <link rel="icon" href="/static/views/plant-favicon.png">
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <!-- JS -->
-    <script defer src="../js/populate-nav.js"></script>
+    <script defer src="/static/js/populate-nav.js"></script>
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
