--- a/webapp/static/html/addPlant.html
+++ b/webapp/static/html/addPlant.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="decription" content="A simple website made to track my plants">
-    <title>Peter's Plant Processor</title>
+    <title>Login</title>
     <!-- FAVICON -->
     <link rel="icon" href="../views/plant-favicon.png">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/login.css">
     <!-- JS -->
     <script defer src="../js/populate-nav.js"></script>
     <!-- FONT -->
@@ -20,9 +21,36 @@
     <nav>
     </nav>
     <div class="centered">
-        <form action="">
-            
+        <h1>Time for a new plant!</h1>
+        <div class="dividing-line"></div>
+        <div class="login-alert" style="display: none"></div>
+        <form class="login-table" method="POST" action="/addPlant" enctype="multipart/form-data">
+            <div class="login-box">
+                <label>Plant Name</label>
+                <input type="text" class="login-inputs" name="name" pattern="^[a-zA-Z0-9]+$" required maxlength="30">
+            </div>
+            <div class="login-box">
+                <label>Plant Species</label>
+                <input type="text" class="login-inputs" name="species" pattern="^[a-zA-Z0-9]+$" required maxlength="50">
+            </div>
+            <div class="login-box">
+                <label>Description</label>
+                <input type="text" class="login-inputs" name="description" pattern="^[a-zA-Z0-9]+$" required maxlength="255">
+            </div>
+            <div class="login-box">
+                <label>Last Watered</label>
+                <input type="date" class="login-inputs" name="lastWatered" required>
+            </div>
+            <div class="login-box">
+                <label>Picture</label>
+                <input type="file" class="login-inputs" id="password" name="picture" required>
+            </div>
+            <div class="login-box">
+                <button id="submit">Submit</button>
+            </div>
         </form>
     </div>
 </body>
+<script>
+</script>
 </html>
