Added more functionality to creating a new account

--- a/webapp/static/html/newUser.html
+++ b/webapp/static/html/newUser.html
@@ -75,6 +75,7 @@
                     body: JSON.stringify(params)
                 });
                 let data = await result.json();
+                window.location.href='myPlants.html'
             }
         }
     }
