Added link to login page

--- a/webapp/static/html/index.html
+++ b/webapp/static/html/index.html
@@ -26,6 +26,11 @@
     </div>
     <div class="dividing-line"></div>
     <div class="centered">
+        <h1>Want to track your own plants?</h1>
+        <p>Click <a href="login.html" style="text-decoration: underline;">here</a> to login and start tracking!</p>
+    </div>
+    <div class="dividing-line"></div>
+    <div class="centered">
         <h1>What is it?</h1>
         <p>
             After picking up my first plant right before moving into my college apartment, I was wondering if I would have a way to be able to remember when it needed to be watered.
