--- a/webapp/static/html/index.html
+++ b/webapp/static/html/index.html
@@ -27,7 +27,7 @@
     <div class="dividing-line"></div>
     <div class="centered">
         <h1>Want to track your own plants?</h1>
-        <p>Click <a href="login.html" style="text-decoration: underline;">here</a> to login and start tracking!</p>
+        <p>Click <a href="login" style="text-decoration: underline;">here</a> to login and start tracking!</p>
     </div>
     <div class="dividing-line"></div>
     <div class="centered">
