Included more info in the about me

--- a/webapp/static/html/aboutMe.html
+++ b/webapp/static/html/aboutMe.html
@@ -29,14 +29,29 @@
         <div class="dividing-line"></div>
         <div class="centered">
             <h1>Some things about me:</h1>
-            <p><ul>
-            <li>I'm a current Sophomore at the University of Minnesota - Twin Cities. I'm sure you can guess, but I am a computer science student, hoping to graduate with some sort of emphasis on web development.</li>
-            <li>Aside from being a full time CS student, I also TA an introductory computer science course here at the U</li>
-            <li>Outside of school, some of my hobbies include playing the piano and lifting weights</li>
-            <li>I only have a few plants, but it's enough to the point where I need to make a website solely for them</li>
-            <li>I used to work at a garden center over the summer, which I like to attribute my liking of plants to</li>
-            </ul></p>
+            <div id="about-me-image-title">
+                <div style="width: 50%">
+                    <p><ul>
+                        <li>I'm a current Sophomore at the University of Minnesota - Twin Cities. I'm sure you can guess, but I am a computer science student, hoping to graduate with some sort of emphasis on web development.</li>
+                        <li>Aside from being a full time CS student, I also TA an introductory computer science course here at the U</li>
+                        <li>Outside of school, some of my hobbies include playing the piano and lifting weights (and caring for plants of course)</li>
+                        <li>I only have a few plants, but it's enough to the point where I need to make a website solely for them</li>
+                        <li>I used to work at a garden center over the summer, which I like to attribute my liking of plants to (a picture of my garden center can be seen on the right)</li>
+                    </ul></p>
+                </div>
+                <img src="../views/gardenCenter.jpg" width="400" height="525" style="border: 1px solid white; margin-bottom: 1%">
+            </div>
         </div>
+        <div class="dividing-line"></div>
+            <div class="centered">
+                <div id="about-me-image-title" style="padding-top: 3%">
+                    <img src="../views/sky.jpg" width="500" height="450" style="border: 1px solid white; margin-bottom: 1%">
+                    <div class="centered">
+                        <p>Aside from plants, I'm also just a big fan of nature in general (especially pictures of the sky)</p>
+                        <p>Also, I'm a cat fan, if you can't tell from the picture of me above</p>
+                    </div>
+                </div>
+            </div>
     </div> <!-- END aboutMe body-->
 </body>
 </html>
