--- a/webapp/static/html/newUser.html
+++ b/webapp/static/html/newUser.html
@@ -29,11 +29,15 @@
         <div class="login-table">
             <div class="login-box">
                 <label>Username</label>
-                <input type="text" class="login-inputs" id="username" pattern="^[a-zA-Z0-9]+$" required>
+                <input type="text" class="login-inputs" id="username" pattern="^[a-zA-Z0-9]+$" required minlength="0" maxlength="50">
+            </div>
+            <div class="login-box">
+                <label>Preferred Name</label>
+                <input type="text" class="login-inputs" id="name" pattern="^[a-zA-Z0-9\s]+$" required minlength="0" maxlength="50">
             </div>
             <div class="login-box">
                 <label style="padding-right: 28px">Password</label>
-                <input type="password" class="login-inputs" id="password" pattern="^[a-zA-Z0-9]+$" required>
+                <input type="password" class="login-inputs" id="password" pattern="^[a-zA-Z0-9./[]';-_=+\{}]+$" required minlength="8" maxlength="50">
             </div>
             <div class="login-box">
                 <label style="padding-right: 24px">Confirm Password</label>
@@ -67,6 +71,7 @@
             }
             else {
                 let params = {
+                    name: document.querySelector('#name').value,
                     password: document.querySelector('#password').value,
                     username: document.querySelector('#username').value
                 };
