modified index page

--- a/webapp/static/html/index.html
+++ b/webapp/static/html/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="dividing-line"></div>
     <div class="centered">
-        <h1>Want to track your own plants?</h1>
+        <h1>Want to track your plants?</h1>
         <p>Click <a href="login" style="text-decoration: underline;">here</a> to login and start tracking!</p>
     </div>
     <div class="dividing-line"></div>
