changed redirect to /templates/myPlants

--- a/webapp/static/html/newUser.html
+++ b/webapp/static/html/newUser.html
@@ -81,7 +81,7 @@
                     body: JSON.stringify(params)
                 });
                 let data = await result.json();
-                window.location.href='myPlants.html'
+                window.location.href='/templates/myPlants'
             }
         }
     }
