Changes to DOM elements

--- a/webapp/static/html/aboutMe.html
+++ b/webapp/static/html/aboutMe.html
@@ -20,7 +20,7 @@
     <nav>
     </nav>
     <div id="about-me-body">
-        <div id="about-me-image-title">
+        <div class="about-me-image-title">
             <img src="../views/pictureOfMe.jpg" width="400" height="525" style="border: 1px solid white">
             <div id="about-me-main-title">
                 Hello! <br> I'm Peter
@@ -29,7 +29,7 @@
         <div class="dividing-line"></div>
         <div class="centered">
             <h1>Some things about me:</h1>
-            <div id="about-me-image-title">
+            <div class="about-me-image-title">
                 <div style="width: 50%">
                     <p><ul>
                         <li>I'm a current Sophomore at the University of Minnesota - Twin Cities. I'm sure you can guess, but I am a computer science student, hoping to graduate with some sort of emphasis on web development.</li>
@@ -44,7 +44,7 @@
         </div>
         <div class="dividing-line"></div>
             <div class="centered">
-                <div id="about-me-image-title" style="padding-top: 3%">
+                <div class="about-me-image-title" style="padding-top: 3%">
                     <img src="../views/sky.jpg" width="500" height="450" style="border: 1px solid white; margin-bottom: 1%">
                     <div class="centered">
                         <p>Aside from plants, I'm also just a big fan of nature in general (especially pictures of the sky)</p>
