Changes to styling

--- a/webapp/static/html/login.html
+++ b/webapp/static/html/login.html
@@ -22,7 +22,7 @@
     </nav>
     <div class="centered">
         <h1>Welcome!</h1>
-        <h3 class="centered">To track data about your own plants, you must first login.</h3><br>
+        <h3 style="text-align: center">To track data about your own plants, you must first login.</h3><br>
         <p>Don't have an account? Click <a href="/static/html/newUser.html" style="text-decoration: underline;">here</a> to make one!</p>
         <p>Username and password ARE case sensitive</p>
         <div class="dividing-line"></div>
