--- a/webapp/static/html/invalidUser.html
+++ b/webapp/static/html/invalidUser.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/static/views/plant-favicon.png">
     <!-- CSS -->
     <link rel="stylesheet" href="/static/css/main.css">
-    <link rel="stylesheet" href="/static/css/plantPage.css"
+    <link rel="stylesheet" href="/static/css/plantPage.css">
     <!-- JS -->
     <script defer src="/static/js/populate-nav.js"></script>
     <!-- FONT -->
