--- a/webapp/static/html/invalidUser.html
+++ b/webapp/static/html/invalidUser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="decription" content="A simple website made to track my plants">
-    <title>Peter's Plant Processor</title>
+    <title>Invalid User</title>
     <!-- FAVICON -->
     <link rel="icon" href="/static/views/plant-favicon.png">
     <!-- CSS -->
